Signed-off-by: Jack O Donoghue <Jack.ODonoghue@students.ittralee.ie>

--- a/DVDSys/DVDSys.csproj
+++ b/DVDSys/DVDSys.csproj
@@ -141,6 +141,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rent.cs" />
     <Compile Include="Type.cs" />
     <Compile Include="Vali.cs" />
     <EmbeddedResource Include="frmAddCustomer.resx">
