--- a/DVDSys/DVDSys.csproj
+++ b/DVDSys/DVDSys.csproj
@@ -140,6 +140,7 @@
     <Compile Include="frmUpdateDVDType.Designer.cs">
       <DependentUpon>frmUpdateDVDType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Payment.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rent.cs" />
