--- a/DVDSys/DVDSys.csproj
+++ b/DVDSys/DVDSys.csproj
@@ -152,7 +152,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rent.cs" />
     <Compile Include="Type.cs" />
-    <Compile Include="Vali.cs" />
+    <Compile Include="Validation.cs" />
     <EmbeddedResource Include="frmAddCustomer.resx">
       <DependentUpon>frmAddCustomer.cs</DependentUpon>
     </EmbeddedResource>
